finish admin dashboard UI, CRUD district && village