@@ -9,9 +9,9 @@ public class FormUtil {
     public static <T> T toModel(Class<T> tClass, HttpServletRequest request) {
         T object = null;
         try {
-            object = tClass.newInstance();
+             object = tClass.getConstructor().newInstance();
             BeanUtils.populate(object, request.getParameterMap());
-        } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
             e.printStackTrace();
             System.out.println(e.getMessage());
         }
